<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app1"
    android:outlineAmbientShadowColor="#3C3F41"
    android:outlineSpotShadowColor="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:outlineAmbientShadowColor="#EEAAEEAA"
        android:outlineSpotShadowColor="#EEAAEEAA"
        android:shadowColor="#DFE5EA"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="6"
        android:text="@string/intro"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:gravity="clip_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt">

        <Button
            android:id="@+id/newGameBtn"
            android:layout_width="196dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:text="@string/newGame"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/highScoreBtn"
            android:layout_width="196dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:text="@string/showHigh"
            android:textSize="30sp" />

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="196dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:text="@string/exit"
            android:textSize="30sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>