<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/app1"
    android:layout_height="match_parent"
    tools:context=".HighScoreAfterGame">

    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:outlineAmbientShadowColor="#EEAAEEAA"
        android:outlineSpotShadowColor="#EEAAEEAA"
        android:shadowColor="#DFE5EA"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="6"
        android:text="@string/congrats"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PlayerScorePlaceHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <TextView
        android:id="@+id/PlayerScorePlaceHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:outlineAmbientShadowColor="#EEAAEEAA"
        android:outlineSpotShadowColor="#EEAAEEAA"
        android:shadowColor="#DFE5EA"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="6"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <TextView
        android:id="@+id/ifHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:outlineAmbientShadowColor="#EEAAEEAA"
        android:outlineSpotShadowColor="#EEAAEEAA"
        android:shadowColor="#DFE5EA"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="6"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PlayerScorePlaceHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congrats"
        app:layout_constraintVertical_bias="0.349" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="120dp"
        android:layout_height="69dp"
        android:background="@drawable/shape"
        android:text="@string/backBtn"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <Button
        android:id="@+id/restartBtn"
        android:layout_width="120dp"
        android:layout_height="69dp"
        android:background="@drawable/shape"
        android:text="@string/restart"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />
</androidx.constraintlayout.widget.ConstraintLayout>